[tool.poetry]
name = "py-utils"
version = "0.1.0"
description = ""
authors = ["Yaroslav Petrov <yaroslav.v.petrov@yandex.ru>"]
readme = "README.md"
packages = [{ include = "utils", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
